# inkflow

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/inkflow/: __init__.py  cli.py  core.py
